--- a/bio.html
+++ b/bio.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1>Sobre mim</h1>
-    <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade, durabilidade
+    <p>Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de  <em>qualidade</em>, <em> durabilidade</em>
         e que
-        agregam valor para meus clientes.</p>
+      <em>agregam valor</em> para meus clientes.</p>
 
     <p>
         Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio
@@ -25,10 +25,10 @@
     <p>
         Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo,
         baseado
-        em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.</p>
+        em feedback contínuo. <strong> Não trabalho com escopo fechado </strong>: o cliente é que decide quando o produto está pronto.</p>
 
     <p>
-        Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.</p>
+        Também não trabalho com prazos fechados: <strong> qualidade é importante demais para ser sacrificada.</strong></p>
 
     <h2>Experiência</h2>
 
